Added logic for committing changes, logic for getting the list of versions from the lakefs for objects
